<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FormActivity">
    <android.support.v7.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar_form"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/black"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_form"
        app:layout_constraintBottom_toTopOf="@+id/container_footer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/edit_author"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:hint="@string/hint_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_notes"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:hint="@string/hint_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginBottom="8dp"
            android:paddingRight="8dp"
            android:drawablePadding="4dp"
            android:drawableRight="@drawable/baseline_calendar_today_black_18"
            android:id="@+id/edit_date"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:hint="@string/hint_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.RecyclerView

            tools:listitem="@layout/item_question"
            android:id="@+id/recyclerview_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        app:layout_constraintBottom_toTopOf="@id/container_footer"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/container_footer"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:onClick="onBack"
            android:drawableLeft="@drawable/baseline_arrow_back_ios_black_18"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/action_back"
            android:background="@null"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="2"
            android:text="@string/title_page_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:onClick="onNext"
            android:drawableRight="@drawable/baseline_navigate_next_black_24"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/action_next"
            android:background="@null"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>